--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Studentsbook 📙</h1>
+    <div class="add-student-container">
+        <input type="text" id="student-name" class="student-name" placeholder="Enter student name"/>
+        <button type="button" class="btn-action" onclick="addStudent()">
+            Add 
+        </button>
+        <button type="button" class="btn-action" onclick="removeStudent()">
+            Remove All
+        </button>
+    </div>
+
+    <div id="students-container"></div>
 </body>
 </html>
