--- a/index.html
+++ b/index.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            margin: 0;
+            padding: 0;
+        }
+        .student-card{
+            border:1px solid black;
+            padding: 10px 20px;
+            margin:10px;
+            border-radius: 20px;
+            background-color: #f0f0f0;
+        }
+        .add-student-container{
+            background-color: tomato;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            display: flex;
+            justify-content: center;
+        }
+        .btn-action{
+            padding: 2px 5px;
+            border-radius: 30px;
+            min-width: 60px;
+            border: none;
+            margin-left: 10px;
+            margin-right: 10px;
+            cursor: pointer;
+        }
+        .student-name{
+            border: 5px;
+            border-radius: 30px;
+            border: none;
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Studentsbook 📙</h1>
